[gd_scene load_steps=20 format=3 uid="uid://cnthwc4b5absq"]

[ext_resource type="Script" uid="uid://xek5lmvvegqj" path="res://buildings/houses/generic_building.gd" id="1_h7pdc"]
[ext_resource type="Script" uid="uid://d1smwnicvqg2p" path="res://resource.gd" id="2_wkn6t"]
[ext_resource type="PackedScene" uid="uid://52wvmusxqvda" path="res://art/building.glb" id="3_e158k"]
[ext_resource type="PackedScene" uid="uid://bmmkgiy15g2y3" path="res://art/plot.glb" id="4_bbg81"]
[ext_resource type="PackedScene" uid="uid://crtqhftgga4pi" path="res://art/tent.glb" id="5_80xdx"]
[ext_resource type="Texture2D" uid="uid://cupxa3dpt71mm" path="res://art/ui/rectangle.svg" id="6_5iuos"]
[ext_resource type="Texture2D" uid="uid://b4vrn0b8m4tq5" path="res://art/resources/log.png" id="7_0gt78"]
[ext_resource type="Texture2D" uid="uid://bd5araxl5u2og" path="res://art/resources/stone.png" id="8_4p7gg"]
[ext_resource type="Texture2D" uid="uid://tai5t5ds2tuy" path="res://art/resources/thatch.png" id="9_7u27u"]
[ext_resource type="Texture2D" uid="uid://fa6guitmyxwh" path="res://art/resources/food.png" id="10_o8bbq"]

[sub_resource type="Resource" id="Resource_7ank7"]
script = ExtResource("2_wkn6t")
resource_required = 0
amount = 1
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="Resource" id="Resource_xcy2e"]
script = ExtResource("2_wkn6t")
resource_required = 1
amount = 1
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="Resource" id="Resource_itc6r"]
script = ExtResource("2_wkn6t")
resource_required = 2
amount = 1
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="Resource" id="Resource_qos6l"]
script = ExtResource("2_wkn6t")
resource_required = 3
amount = 1
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="BoxShape3D" id="BoxShape3D_pkg7o"]

[sub_resource type="ViewportTexture" id="ViewportTexture_jr3t4"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y6el6"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_jr3t4")

[sub_resource type="QuadMesh" id="QuadMesh_xex5t"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_y6el6")
size = Vector2(10.5, 1.8)

[sub_resource type="LabelSettings" id="LabelSettings_cu0vx"]
outline_size = 1
outline_color = Color(0.05, 0.05, 0.05, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.745098)

[node name="GeneralStore" type="StaticBody3D"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
collision_layer = 12
collision_mask = 0
script = ExtResource("1_h7pdc")
building_type = 5
build_cost = Array[ExtResource("2_wkn6t")]([SubResource("Resource_7ank7"), SubResource("Resource_xcy2e"), SubResource("Resource_itc6r"), SubResource("Resource_qos6l")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 7, 1)
shape = SubResource("BoxShape3D_pkg7o")

[node name="building" parent="." instance=ExtResource("3_e158k")]
visible = false

[node name="plot" parent="." instance=ExtResource("4_bbg81")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="tent" parent="." instance=ExtResource("5_80xdx")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false

[node name="RecipeBoard" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
mesh = SubResource("QuadMesh_xex5t")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(350, 60)
render_target_clear_mode = 2

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SubViewport/Control/Panel"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_5iuos")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/Control/Panel"]
layout_mode = 0
offset_top = 5.0
offset_right = 332.0
offset_bottom = 45.0
alignment = 1

[node name="Logs" type="TextureRect" parent="SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_0gt78")
expand_mode = 3

[node name="LogsAmount" type="Label" parent="SubViewport/Control/Panel/HBoxContainer/Logs"]
layout_mode = 0
offset_left = 39.0
offset_top = 32.0
offset_right = 79.0
offset_bottom = 55.0
text = "x0"
label_settings = SubResource("LabelSettings_cu0vx")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Stone" type="TextureRect" parent="SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_4p7gg")
expand_mode = 3

[node name="StoneAmount" type="Label" parent="SubViewport/Control/Panel/HBoxContainer/Stone"]
layout_mode = 0
offset_left = 35.0
offset_top = 32.0
offset_right = 75.0
offset_bottom = 55.0
text = "x0"
label_settings = SubResource("LabelSettings_cu0vx")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Thatch" type="TextureRect" parent="SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_7u27u")
expand_mode = 3

[node name="ThatchAmount" type="Label" parent="SubViewport/Control/Panel/HBoxContainer/Thatch"]
layout_mode = 0
offset_left = 46.0
offset_top = 32.0
offset_right = 86.0
offset_bottom = 55.0
text = "x0"
label_settings = SubResource("LabelSettings_cu0vx")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Food" type="TextureRect" parent="SubViewport/Control/Panel/HBoxContainer"]
layout_mode = 2
texture = ExtResource("10_o8bbq")
expand_mode = 3

[node name="FoodAmount" type="Label" parent="SubViewport/Control/Panel/HBoxContainer/Food"]
layout_mode = 0
offset_left = 37.0
offset_top = 32.0
offset_right = 77.0
offset_bottom = 55.0
text = "x0"
label_settings = SubResource("LabelSettings_cu0vx")
horizontal_alignment = 2
vertical_alignment = 2
