[gd_scene load_steps=12 format=3 uid="uid://cda1tiyw1kh5g"]

[ext_resource type="Script" uid="uid://xek5lmvvegqj" path="res://buildings/houses/generic_building.gd" id="1_t0ehr"]
[ext_resource type="Script" uid="uid://d1smwnicvqg2p" path="res://resource.gd" id="2_568q3"]
[ext_resource type="PackedScene" uid="uid://52wvmusxqvda" path="res://art/building.glb" id="3_2jajr"]
[ext_resource type="PackedScene" uid="uid://bmmkgiy15g2y3" path="res://art/plot.glb" id="4_43tq6"]
[ext_resource type="PackedScene" uid="uid://crtqhftgga4pi" path="res://art/tent.glb" id="5_6ur0v"]
[ext_resource type="PackedScene" uid="uid://dsko7ff5b1ei1" path="res://buildings/recipe_board.tscn" id="6_xjwbn"]

[sub_resource type="Resource" id="Resource_7ank7"]
script = ExtResource("2_568q3")
resource_required = 0
amount = 2
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="Resource" id="Resource_xcy2e"]
script = ExtResource("2_568q3")
resource_required = 1
amount = 4
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="Resource" id="Resource_itc6r"]
script = ExtResource("2_568q3")
resource_required = 2
amount = 3
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="Resource" id="Resource_qos6l"]
script = ExtResource("2_568q3")
resource_required = 3
amount = 3
metadata/_custom_type_script = "uid://d1smwnicvqg2p"

[sub_resource type="BoxShape3D" id="BoxShape3D_pkg7o"]

[node name="StoneMason" type="StaticBody3D"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
collision_layer = 12
collision_mask = 0
script = ExtResource("1_t0ehr")
building_type = 1
build_cost = Array[ExtResource("2_568q3")]([SubResource("Resource_7ank7"), SubResource("Resource_xcy2e"), SubResource("Resource_itc6r"), SubResource("Resource_qos6l")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 7, 1)
shape = SubResource("BoxShape3D_pkg7o")

[node name="building" parent="." instance=ExtResource("3_2jajr")]
visible = false

[node name="plot" parent="." instance=ExtResource("4_43tq6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="tent" parent="." instance=ExtResource("5_6ur0v")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false

[node name="RecipeBoard" parent="." instance=ExtResource("6_xjwbn")]
